<resources>
    <string name="app_name">疫苗圈</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="expand">展开</string>
    <string name="shrink">收起</string>
    <string name="tips">This is a custom TextView that can be expanded with a smooth transition
        animation,you can set the number of lines to expand,change its icon or text and so on\n
    </string>
    <string name="unknown">
        unknown
    </string>
    <string name="order_celebrate">恭喜您!</string>
    <string name="order_notice">请您再次核对您要推广的资源信息</string>
    <string name="order_already_notice">提交的申请推广已经通过审核，\n您提交的竞标保证金已经查收。</string>
    <string name="order_already_view_account">查看转账汇款账户</string>
    <string name="order_complete_notice">提交的申请推广已经正式签约，\n请按照推广协议尽快完成推广任务。</string>
    <string name="order_end_notice">提交的申请推广已终止，\n感谢您的参与。</string>
    <string name="order_complete_enter_reconciliation">此业务暂无发货信息</string>
    <string name="order_submit_notice">您提交的申请推广,已经收到\n提交的竞标保证金,目前正在审核中,请耐心等待。</string>
    <string name="order_unpaid_notice">您已成功提交推广申请，为了保证\n您有效竞标，请您尽快提交竞标保证金。</string>
    <string name="account_passed_notice">审核已通过，不可编辑</string>
    <string name="account_auditing_notice">信息审核中，不可编辑</string>
    <string name="account_id_photo_notice">初次上传，请拍摄证件照</string>
    <string name="account_experience_notice">请添加推广经历</string>
    <string name="account_promotion_experience">
        从事疫苗或医药相关产品推广经历
    </string>
    <string name="account_ever_notice">请填写曾经所在公司及职位</string>
    <string name="account_advantage_notice">请填写推广优势</string>
    <string name="account_zip_error_notice">文件压缩出现未知错误，暂无法上传</string>
    <string name="account_upload_success_notice">提交成功，请等待审核</string>
    <string name="upload_progress_dialog_title">上传中，请稍后...</string>
    <string name="response_progress_dialog_title">正在处理，请稍后...</string>
    <string name="download_progress_dialog_title">下载中，请稍后...</string>
    <string name="download_complete_dialog_title">下载成功</string>
    <string name="download_complete_dialog_msg">下载完成，请选择文件处理方式</string>
    <string name="download_complete_dialog_pb">发送出去</string>
    <string name="download_complete_dialog_nb">本地打开</string>
    <string name="account_biz_licence_notice">初次上传，请拍摄营业执照</string>
    <string name="empty_view_assurance">一分耕耘，一分收获，请耐心等待。</string>
    <string name="empty_view_collection">多收藏也不会怀孕……</string>
    <string name="empty_view_notice">“kong kong”如也，快快与我发生关系吧。</string>
    <string name="empty_view_customer">太孤单了吧，赶快去全部客户里挑选您想要\n推广的客户吧。</string>
    <string name="empty_view_payment">还在等什么，赶快到资源里面申请推广吧。</string>
    <string name="empty_view_promotion">不要着急，让奖励资金飞一会儿~</string>
    <string name="empty_view_reconciliation">早起的鸟儿有虫吃，快到资源里面申请推广吧。</string>
    <string name="empty_view_resources">好饭不怕晚，推广资源也是。</string>
    <string name="empty_view_experience">快快告诉我们你辉煌的历史</string>
    <string name="empty_view_study_collection">多收藏也不会怀孕……</string>
    <string name="empty_view_video_list">考试是可以“挣钱”的。但是，暂时没有学习任务。</string>
    <string name="empty_view_report">没有任何记录，求阴影面积</string>
    <string name="empty_view_authorization">没有任何记录，求阴影面积</string>
    <string name="empty_view_order">不是没有业务状态，只是没有申请推广而已</string>
    <string name="empty_view_riches_detail">没有进、哪有出啊，快到资源里面申请推广吧。</string>
    <string name="empty_view_study_achievement">考试是可以“挣钱”的。但是，暂时没有学习任务。</string>
    <string name="empty_view_vendor_reconciliation">早起的鸟儿有虫吃，快到资源里面申请推广吧。</string>
    <string name="empty_view_vendor_study_exam">考试是可以“挣钱”的。但是，暂时没有学习任务。</string>
    <string name="empty_view_vendor_sale">君子爱财、取之有道，快到资源里面申请推广吧。</string>
    <string name="empty_view_vendor_deposit">有钱使得鬼推磨，快到资源里面申请推广吧。</string>
    <string name="empty_view_vendor_study_withdrawal">一寸光阴一寸金，快到资源里面申请推广吧。</string>
    <string name="empty_view_win">要学习是好事，但是……</string>


    <string name="assurance_withdrawal_personal">
        您申请的提现金额，将在工作人员收到提现\n申请之后5个工作日内，退回到您原来的\n推广主体个人账户里，请注意查收。
    </string>
    <string name="assurance_withdrawal_corporate">
        您申请的提现金额，将在工作人员收到提现\n申请之后5个工作日内，退回到您原来的\n推广主体对公账户里，请注意查收。
    </string>
    <string name="promotion_withdrawal_personal">
        您申请的提现金额，将在工作人员收到提现\n申请之后5个工作日内，支付到您绑定的\n推广主体个人账户里，请注意查收。
    </string>
    <string name="promotion_withdrawal_corporate">
        您申请的提现金额，将在工作人员收到对应\n金额发票后5个工作日内，支付到您绑定\n推广主体对公账户里，请注意查收。
    </string>
    <string name="exam_withdrawal_personal">
        您申请的提现金额，将在工作人员收到提现\n申请之后5个工作日内，支付到您绑定的\n推广主体个人账户里，请注意查收。
    </string>
    <string name="exam_withdrawal_corporate">
        您申请的提现金额，将在工作人员收到对应\n金额发票后5个工作日内，支付到您绑定\n推广主体对公账户里，请注意查收。
    </string>
    <string name="overdue_withdrawal_per">
        您申请的提现金额，将在工作人员审核通过\n后24小时内，支付到您绑定推广主体个人\n账户里，请注意查收。
    </string>
    <string name="overdue_withdrawal_cor">
        您申请的提现金额，将在工作人员审核通过\n后24小时内，支付到您绑定推广主体对公\n账户里，请注意查收。
    </string>
    <string name="overdue_per_confirm">
        您申请的推广奖励充值逾期垫款，预计2个\n小时内转入您个人逾期垫款账户里。
    </string>
    <string name="overdue_cor_confirm">
        您申请的推广奖励充值逾期垫款，将在工作\n人员收到对应金额发票后1个工作日内转\n入您对公逾期垫款账户里。
    </string>
    <string name="news_submit_error">提交成功，谢谢反馈</string>
    <string name="exam_to_last">当前已经是第一道题</string>
    <string name="exam_to_next">当前已经是最后一道题</string>
    <string name="exam_dialog_msg">考试未完成，是否现在交卷？</string>
    <string name="exam_dialog_nb">不，我还没有做完</string>
    <string name="exam_dialog_pb">是的，交卷</string>
    <string name="exam_dialog_exit">退出本次考试</string>
    <string name="resources_promotion_personal_item1">推广人姓名：</string>
    <string name="resources_promotion_personal_item2">推广人身份证号：</string>
    <string name="resources_promotion_personal_item3">推广人联系电话：</string>
    <string name="resources_promotion_personal_option1">请输入推广人姓名</string>
    <string name="resources_promotion_personal_option2">请输入推广人身份证号码</string>
    <string name="resources_promotion_personal_option3">请输入推广个人联系电话</string>
    <string name="resources_promotion_corporate_item1">公司名称：</string>
    <string name="resources_promotion_corporate_item2">公司账号：</string>
    <string name="resources_promotion_corporate_item3">推广人：</string>
    <string name="resources_promotion_corporate_option1">请绑定对公信息</string>
    <string name="resources_promotion_corporate_option2">请绑定对公信息</string>
    <string name="resources_promotion_corporate_option3">请绑定对公信息</string>
    <string name="score_detail_dialog_msg">奖学金=第一次考试成绩×当前总发货量+当前考试平均成绩×当前发货量</string>
    <string name="video_detail_dialog_msg">您的积分余额不足，请完成积分任务后再来观看此视频。</string>
    <string name="report_detail_note">注释：请上传详细的诊断证明扫描件，要求图片是jpg格式</string>
    <string name="order_online_note">注释：请上传完整产品采购协议扫描件，要求图片是JPG格式</string>
    <string name="dialog_confirm_submit_account">
        推广主体信息一旦提交，您将会在24小时\n内收到审核结果通知，审核通过后\n将不能再次修改。
    </string>
    <string name="dialog_confirm_submit_report">
        您确定要提交吗？\n确定提交后不得修改！
    </string>
    <string name="dialog_confirm_submit_authorization">
        您确定要提交资料邮寄申请吗？确认提交工作人员会在1-2个工作日之内安排邮寄，请耐心等待。
    </string>

    <string name="authorization_note">
        请在确定有已签约推广业务基础上申请。\n相应已确定签约业务的纸质版协议，与授权委托书一并邮寄。
    </string>
    <string name="upload_success">
        提交成功，请耐心等待处理结果
    </string>
    <string name="regex_name">
        姓名只允许是中文、英文、数字和“_”
    </string>
    <string name="regex_id_card">
        身份证号格式不正确
    </string>
    <string name="regex_email">
        邮箱地址格式不正确
    </string>
    <string name="dialog_tax_error">
        税率获取失败，请联系客服人员
    </string>
    <string name="rationale_storage">
        请开启存储权限
    </string>
    <string name="rationale_camera">
        请开启相机权限
    </string>
    <string name="title_settings_dialog">
        权限要求
    </string>
    <string name="rationale_ask_again">
        如果没有相关权限，这个应用程序的某些功能可能无法正常使用。打开应用程序设置界面修改应用程序权限。
    </string>
    <string name="setting">
        设置
    </string>
    <string name="positive">
        确定
    </string>
    <string name="cancel">
        取消
    </string>
    <string name="open_camera">
        打开相机
    </string>
    <string name="open_DCIM">
        打开相册
    </string>

    <string name="invoice_info">
        北京亿苗通生物科技有限公司
    </string>
    <string name="invoice_tn">
        91110102327129973Q
    </string>
    <string name="invoice_address">
        北京市西城区西直门外大街18号楼13层1单元1610 010-68107932
    </string>
    <string name="invoice_account">
        中国银行股份有限公司北京西直门外支行 329863413119
    </string>
    <string name="invoice_type">
        增值税专用发票
    </string>
    <string name="invoice_project">
        推广服务费
    </string>
    <string name="vaccine_promotion_way">
        选择可提现推广费充值逾期垫款，可直接回到财富首页查看逾期垫款金额。用户可以在对账模块自助选择要垫款的发货订单。
    </string>
    <string name="overdue_description_corporate">
        <font color="#d24141">充值说明</font>：充值逾期垫款需先提供对应金额发票，解冻推广奖励后方可垫款。
    </string>
    <string name="overdue_description_personal">
        <font color="#d24141">充值说明</font>：充值逾期垫款之后，充值金额自动进入逾期垫款账户，用户即可操作垫款。
    </string>
    <string name="overdue_none">
        您目前无可提现的推广费可以充值逾期垫款
    </string>
    <string name="overdue_pay">
        请选择充值逾期垫款的可提现推广费
    </string>

    <string name="default_count">
        3298 6341 3119
    </string>
    <string name="default_company_name">
        北京亿苗通生物科技有限公司
    </string>
    <string name="default_bank">
        中国银行北京西直门外支行
    </string>
    <string name="pay_instruction">
        提交竞标保证金单个银行账户单日支付限额3000元，如达到支付上限请更改银行卡或择日支付。
    </string>

    <string name="pay_loading">
        请求数据中..请稍后
    </string>

    <string name="vendor_first">
        请先选择厂家
    </string>
    <string name="vendor_same">
        请选择同一厂家
    </string>
    <string name="category_same">
        请选择同一产品
    </string>
    <string name="vaccine_all">
        请选择同一厂家产品
    </string>
    <string name="vaccine_at_least">
        请至少选择一条资源
    </string>

    <string name="detail_at_least_one">
        请至少保留一条资源
    </string>
    <string name="detail_delete">
        资源删除成功
    </string>

    <string name="pay_way_first">
        请先选择支付方式
    </string>
    <string name="install_wx">
        请先安装微信
    </string>
    <string name="update_wx">
        您目前微信版本不支持支付，请先升级微信
    </string>
    <string name="pay_result">
        支付结果
    </string>
    <string name="pay_success">
        支付成功
    </string>
    <string name="pay_failure">
        支付失败，请稍后再试
    </string>
    <string name="pay_cancel">
        支付取消
    </string>

    <string name="no_data">
        暂无数据
    </string>
    <string name="order_at_least_one">
        请选择要支付的订单
    </string>
    <string name="no_unpaid_order">
        当前暂无待支付状态订单
    </string>

</resources>
