<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@mipmap/ico_details_fillet"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_text"
            android:padding="12dp"
            android:text="发票信息"
            android:textColor="@color/color666"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <LinearLayout
            style="@style/style26">
            <TextView
                style="@style/style27"
                android:text="信息："/>
            <TextView
                style="@style/style28"
                android:text="@string/invoice_info"/>
        </LinearLayout>
        <LinearLayout
            style="@style/style26">
            <TextView
                style="@style/style27"
                android:text="税号："/>
            <TextView
                style="@style/style28"
                android:text="@string/invoice_tn"/>
        </LinearLayout>
        <LinearLayout
            style="@style/style26">
            <TextView
                style="@style/style27"
                android:text="地址及电话："/>
            <TextView
                style="@style/style28"
                android:layout_height="wrap_content"
                android:text="@string/invoice_address"/>
        </LinearLayout>
        <LinearLayout
            style="@style/style26">
            <TextView
                style="@style/style27"
                android:text="开户行及账号："/>
            <TextView
                style="@style/style28"
                android:layout_height="wrap_content"
                android:text="@string/invoice_account"/>
        </LinearLayout>


        <LinearLayout
            style="@style/style26">
            <TextView
                style="@style/style27"
                android:text="发票类型："/>
            <TextView
                style="@style/style28"
                android:text="@string/invoice_type"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginBottom="14dp"
            style="@style/style26">
            <TextView
                style="@style/style27"
                android:text="开具项目："/>
            <TextView
                style="@style/style28"
                android:text="@string/invoice_project"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>