<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/TitleStyle"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.yimiao100.sale.view.TitleView
        android:id="@+id/order_already_title"
        app:title_text="我的业务"
        app:left_isShow="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:background="@color/colorLoginInput"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/ico_my_order_complete"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/order_celebrate"
                    android:textSize="23sp"
                    android:textColor="@color/colorMain"
                    android:layout_margin="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/order_already_submit_time"
                    android:textSize="12sp"
                    android:lineSpacingMultiplier="1.2"
                    android:gravity="center_horizontal"
                    android:textColor="@color/color333"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/order_notice"
                    android:textColor="@color/color999"
                    android:textSize="12sp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="9dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:background="@android:color/white"
                android:layout_marginTop="3dp"
                android:padding="12dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/order_already_vendor_name"
                    android:textSize="15sp"
                    android:textColor="@color/color333"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/order_already_product_name"
                        android:text="产品："
                        style="@style/style8"/>
                    <TextView
                        android:id="@+id/order_already_region"
                        android:text="区域："
                        style="@style/style8"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/order_already_spec"
                        android:text="规格："
                        style="@style/style8"/>
                    <TextView
                        android:id="@+id/order_already_dosage_form"
                        android:text="剂型："
                        style="@style/style8"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/order_already_time"
                        android:text="时间："
                        style="@style/style8"/>
                    <TextView
                        android:id="@+id/order_already_total_money"
                        android:text="推广保证金："
                        style="@style/style8"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/order_already_no"
                    android:text="协议单号："
                    style="@style/style8"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:id="@+id/order_already_show_account"
                android:text="@string/order_already_view_account"
                android:textSize="14sp"
                android:textColor="@color/colorMain"
                android:drawableLeft="@mipmap/ico_tip_left"
                android:drawableRight="@mipmap/ico_tip_right"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="7dp"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/order_already_re"
                android:textColor="@color/color666"
                android:layout_marginRight="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="12dp"
                android:lineSpacingMultiplier="1.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/order_already_download"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/selector_order_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/order_already_upload"
                android:text="上传电子协议"
                android:visibility="gone"
                android:textColor="@android:color/white"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/selector_button"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
